--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
 <body>
+    <h1></h1>
     <h1>Odin Recipes</h1>
+    <ol>
+        <li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a></li>
+        <li><a href="recipes/crossiant.html" target="_blank" rel="noopener noreferrer">Crossiant</a></li>
+    </ol>
+    
 </body>
 </html>
